# data-structures-hw-1

./: .gitignore  CMakeLists.txt  Contestant.cpp  Contestant.h  Country.cpp  Country.h  Makefile  Olympicsa1.cpp  Olympicsa1.h  README.md  StrengthAndId.cpp  StrengthAndId.h  Team.cpp  Team.h  astyle  makefile  node.h  submissions.txt  test.txt  tester.sh  tree.h  wet-diff-v2.py  wet-verify.py  wet1util.h
Scripts/: Olympicsa1.h  maina1.cpp
Tests/: add_country.cpp  add_team.cpp  newTest.in  newTestOut.out  remove_country.cpp  test1.in  test1.out  testTree.cpp  unite_team.cpp
data-structures-hw1/: tree.h
